--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,17 @@
-<p>hello</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta name="viewport" device="width=device-width initial scale=1.0";>
+    <title>survey</title>
+    <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+      <form>
+        <div class="input-container">
+            <input type="text" name="text" class="input" placeholder="Enter text">
+            <div class="highlight"></div>
+          </div>
+  <input type="submit" id="submit" value="Submit" />
+  </form>
+        </body>
+</html>
