--- a/templates/home.html
+++ b/templates/home.html
@@ -3,15 +3,16 @@
   <head>
     <meta name="viewport" device="width=device-width initial scale=1.0" ; />
     <title>survey</title>
-    <link rel="stylesheet" href="styles.css" />
+    <!-- <link rel="stylesheet" href="styles.css" /> -->
   </head>
   <body>
-    <form>
+    <p>{{inp }}</p>
+    <form method="post">
       <div class="input-container">
         <input type="text" name="text" class="input" placeholder="Enter text" />
         <div class="highlight"></div>
       </div>
-      <input type="submit" id="submit" value="Submit" />
+      <input type="submit" name="Submit" id="submit" value="Submit" />
     </form>
   </body>
 </html>
