--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../static/home.css" />
   </head>
   <body>
-    <form class="form-container">
+    <form class="form-container" method="post">
       <div class="input-container">
         <input
           type="number"
