--- a/static/home.css
+++ b/static/home.css
@@ -225,3 +225,13 @@
     gap: 10px;
     padding-right:1.2rem; /* Adjust the spacing between input and button */
   }
+  
+    .ph {
+      display: flex;
+      justify-content: center;
+      padding-top:4rem;
+    }
+  
+  h2{
+    color: white;
+  }
