--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
         />
         <div class="highlight"></div>
       </div>
-      <button type="button">
+      <button >
         Submit
         <div class="star-1">
           <svg
@@ -172,7 +172,7 @@
     </form>
 
     <div class="ph">
-      <h2>{{inp }}</h2>
+      <h2>{{ inp }}</h2>
     </div>
   </body>
 </html>
