--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" device="width=device-width initial scale=1.0" ; />
-    <title>survey</title>
+    <title>detection</title>
     <link rel="stylesheet" href="../static/home.css" />
   </head>
   <body>
@@ -17,7 +17,7 @@
         <div class="highlight"></div>
       </div>
       <button>
-        Button
+        submit
         <div class="star-1">
           <svg
             xmlns:xlink="http://www.w3.org/1999/xlink"
