--- a/templates/home.html
+++ b/templates/home.html
@@ -42,10 +42,10 @@
    
     <script>
       function showLoader() {
-  document.getElementById('loader').style.display = 'flex'; // Display the loader when the button is clicked
+  document.getElementById('loader').style.display = 'flex'; 
 
   setTimeout(function () {
-    document.getElementById('loader').style.display = 'none'; // Hide the loader after 5 seconds
+    document.getElementById('loader').style.display = 'none'; 
   }, 10000);
 }
 
