--- a/templates/loc.html
+++ b/templates/loc.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" device="width=device-width initial scale=1.0" ; />
     <title>Open source</title>
-    <link rel="stylesheet" href="../static/hoe.css" />
+    <link rel="stylesheet" href="../static/loc.css" />
   </head>
   <body>
    
