--- a/static/loc.css
+++ b/static/loc.css
@@ -1,35 +1,34 @@
-
 body {
-    background-image: url('https://images8.alphacoders.com/131/1318499.jpeg'); 
-    background-size: 100% 100%; 
-    background-position: center; 
-   
-  }
-  html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    width:100%;
+  background-image: url("https://images8.alphacoders.com/131/1318499.jpeg");
+  background-size: 100% 100%;
+  background-position: center;
+}
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 /* Center the dropdown */
 .dropdown-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Adjust if needed */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Adjust if needed */
 }
 
 /* Style the dropdown button */
 .dropbtn {
-    padding: 12px;
-    font-size: 16px;
-    cursor: pointer;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    width: 300px;
+  padding: 12px;
+  font-size: 16px;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 300px;
 }
 
 /* Style the dropdown button on hover */
 .dropbtn:hover {
-    background-color: #f1f1f1;
+  background-color: #f1f1f1;
 }
