--- a/templates/loc.html
+++ b/templates/loc.html
@@ -6,20 +6,22 @@
     <link rel="stylesheet" href="../static/loc.css" />
   </head>
   <body>
-   
+   <form method="POST" action="/submit">
     <div class="dropdown-container">
         <div class="dropdown">
-            <select class="dropbtn" id="location">
+            <select class="dropbtn" name="location" id="location">
                 <option value="" disabled selected>Select your location</option>
-                <option value="District 1">Location 1</option>
-                <option value="District 2">Location 2</option>
-                <option value="District 3">Location 3</option>
-                <option value="District 4">Location 3</option>
+                <option value="1">Location 1</option>
+                <option value="2">Location 2</option>
+                <option value="3">Location 3</option>
+                <option value="4">Location 3</option>
                 <!-- Add more options as needed -->
             </select>
         </div>
+        <button type="submit"> Submit
+        </button>
     </div>
-    
+    </form>
     
   </body>
 </html>
