--- a/templates/loc.html
+++ b/templates/loc.html
@@ -6,22 +6,20 @@
     <link rel="stylesheet" href="../static/loc.css" />
   </head>
   <body>
-   <form method="POST" action="/submit">
-    <div class="dropdown-container">
+    <form method="POST">
+      <div class="dropdown-container">
         <div class="dropdown">
-            <select class="dropbtn" name="location" id="location">
-                <option value="" disabled selected>Select your location</option>
-                <option value="1">Location 1</option>
-                <option value="2">Location 2</option>
-                <option value="3">Location 3</option>
-                <option value="4">Location 3</option>
-                <!-- Add more options as needed -->
-            </select>
+          <select class="dropbtn" name="location" id="location">
+            <option value="" disabled selected>Select your location</option>
+            <option value="1">Location 1</option>
+            <option value="2">Location 2</option>
+            <option value="3">Location 3</option>
+            <option value="4">Location 3</option>
+            <!-- Add more options as needed -->
+          </select>
         </div>
-        <button type="submit"> Submit
-        </button>
-    </div>
+        <button type="submit">Submit</button>
+      </div>
     </form>
-    
   </body>
 </html>
