--- a/templates/loc.html
+++ b/templates/loc.html
@@ -6,15 +6,17 @@
     <link rel="stylesheet" href="../static/loc.css" />
   </head>
   <body>
+    <h1>Please proceed by choosing a location below</h1>
+    
     <form method="POST">
       <div class="dropdown-container">
         <div class="dropdown">
           <select class="dropbtn" name="location" id="location">
             <option value="" disabled selected>Select your location</option>
-            <option value="1">Location 1</option>
-            <option value="2">Location 2</option>
-            <option value="3">Location 3</option>
-            <option value="4">Location 3</option>
+            <option value="1">District 1</option>
+            <option value="2">District 2</option>
+            <option value="3">District 3</option>
+            <option value="4">District 4</option>
             <!-- Add more options as needed -->
           </select>
         </div>
